# self_driving_lab

./: .gitignore  README.md  gg.txt
behavior_trees_ros2_example/: README.md
behavior_trees_ros2_example/behavior_tree_ros2_actions/: CMakeLists.txt  package.xml
behavior_trees_ros2_example/behavior_tree_ros2_actions/action/: ArmMoveJoints.action  ArmMovePose.action  ArmMovePoseMsg.action  ArmMovePoseMsgTcp.action  ArmMoveRelativePose.action  ArmMoveToFrame.action  ArmMoveTrajectoryPour.action  FindArucoTag.action  Gripper.action  GripperJoint.action  Home.action  MirMission.action  WaitForUser.action  Xdl.action
behavior_trees_ros2_example/behavior_tree_ros2_actions/srv/: AddObject.srv  AttachObject.srv  GetPrePourPose.srv  LookupTransform.srv  RemoveObject.srv  Xdl.srv
behavior_trees_ros2_example/behavior_tree_ros2_rob8/: CMakeLists.txt  groot2_project.btproj  mobile_base_trees.xml  package.xml  panda_test.xml  stirring.xml
behavior_trees_ros2_example/behavior_tree_ros2_rob8/bt_xml/: database_trees.xml  groot2_project.btproj  hplc.xml  liquid_handling.xml  main_tree.xml  manipulator_trees.xml  mobile_base_trees.xml  panda_test.xml  stirring.xml  test.xml  test2.xml
behavior_trees_ros2_example/behavior_tree_ros2_rob8/src/: arm_behaviors.cpp  behavior_server.cpp  camera_behaviors.cpp  database_behaviors.cpp  gripper_behaviors.cpp  home_action.cpp  home_action.hpp  mir_behaviors.cpp  sleep_action.hpp  test_client.cpp  test_load_and_make_xml_files.cpp
behavior_trees_ros2_example/behavior_tree_ros2_rob8/xdl_xml/: blueprint.xml
camera/: README.md  package.xml  setup.py
camera/camera/: arucoTransformAction.py  aruco_detection_action.py  aruco_pose_estimator.py  lookup_transform.py  wait_for_user.py
camera/config/: aruco_parameters.yaml  cam_default.rviz
camera/launch/: aruco_pose_estimation.launch.py  camera.launch.py  pose_estimation.launch.py  rs.launch.py
camera/resource/calib_images/: cv_save_images.py
camera/utils/: pose_test_eval.py
gazebo_sim/omtp_factory_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
gazebo_sim/omtp_factory_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  omtp_factory.ros2_control.xacro  omtp_factory.ros2_gazebo_control.xacro  omtp_factory.srdf  omtp_factory.urdf.xacro  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  ros2_controllers_gazebo.yaml  sensors_depthmap.yaml
gazebo_sim/omtp_factory_moveit_config/launch/: demo.launch.py  demo_gazebo.launch.py  move_demo.launch.py  move_group.launch.py  move_robot_server.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  system.launch.py  warehouse_db.launch.py
gazebo_sim/omtp_factory_moveit_config/scripts/: spawn_box.py
gazebo_sim/omtp_factory_moveit_config/src/: move_demo.cpp  move_robot_server.cpp
gazebo_sim/omtp_lecture5/: CMakeLists.txt  package.xml
gazebo_sim/omtp_lecture5/config/: ros_controllers.yaml
gazebo_sim/omtp_lecture5/launch/: 1_visualizer.launch  2_image_processing.launch  omtp_lecture5_base.launch
gazebo_sim/omtp_lecture5/urdf/: arm.urdf.xacro  conveyor.urdf.xacro  omtp_factory.urdf.xacro
gazebo_sim/omtp_lecture5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gazebo_sim/omtp_lecture5_moveit_config/config/: fake_controllers.yaml  gazebo_omtp_test.urdf  joint_limits.yaml  ompl_planning.yaml  omtp_test.srdf  pilz_industrial_motion_planner_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
gazebo_sim/omtp_lecture5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
manipulator/: CMakeLists.txt  package.xml
manipulator/analysis/: test_execution_time.py
manipulator/include/manipulator/: move_robot_server.hpp
manipulator/launch/: move_robot_server.launch.py  move_server.launch.py  system.launch.py
manipulator/rviz/: system_default.rviz  system_default2.rviz
manipulator/src/: moveL.cpp  move_robot_server.cpp
manipulator/urdf/test_tube_w_holder/: config.json  offsets.txt  robot.urdf  single_test_tube_holder.part  single_test_tube_holder.stl  test_tube.part  test_tube.stl
mtc_pour/: CMakeLists.txt  package.xml
mtc_pour/include/mtc_pour/: demo_utils.hpp  pour_into.h
mtc_pour/launch/: generate_cadb.launch.py  tams_ur5_demo_prerequisites.launch.py  tams_ur5_prerequisites.launch.py
mtc_pour/meshes/: cylinder.stl  cylinders.stl
mtc_pour/src/: mtc_pour_baxter_demo.cpp  mtc_pour_tams_ur5_demo.cpp  pour_into.cpp
pgsql_interfaces/: CMakeLists.txt  package.xml  pose_format.json
pgsql_interfaces/msg/: ChemicalLocation.msg  WorkstationLocation.msg
pgsql_interfaces/srv/: AddChemical.srv  AddWorkstation.srv  GetAllChemicalLocations.srv  GetChemical.srv  GetVessel.srv  PlaceChemical.srv  PlaceVessel.srv  RemoveChemical.srv  RemoveChemicalPlacement.srv  UpsertChemicalLocation.srv  UpsertWorkstationLocation.srv
pgsql_interfaces/srv/old/: AddLocation  AddWorkstation  GetAllWorkstationLocations  RemoveWorkstation
pgsql_services/: CMakeLists.txt  README.md  breaking_changes_26mar.txt  package.xml  placements.txt
pgsql_services/data/: chemical_aruco_to_first_slot.csv  chemical_pick_aruco_to_first_slot copy.csv  chemical_pick_aruco_to_first_slot.csv  chemical_pick_first_slot_to_every_slot.csv  database_service.cpp  lookut_pose.json  vessel_aruco_to_first_slot.csv  vessel_first_slot_to_every_slot.csv
pgsql_services/src/: database_service.cpp  store_fnc.cpp
xdl_parser2/: README.md  package.xml  setup.cfg  setup.py
xdl_parser2/xdl_parser2/: test.xml  xdl_parser_server.py
(+85 files in other folders)
