<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simontk2010@hotmail.com">simon</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>cv2</build_depend>
  <build_depend>time</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>tf_transformations</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>behavior_tree_ros2_actions</build_depend>
  <build_depend>aruco_pose_estimation</build_depend>
  <build_depend>aruco_interfaces</build_depend>
  <build_depend>rcl_interfaces</build_depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
