<?xml version="1.0"?>
<package format="3">
  <name>mtc_pour</name>
  <version>0.0.0</version>
  <description>Implement pouring stage and examples</description>
  <license>BSD</license>

  <maintainer email="me@v4hn.de">Michael 'v4hn' Goerner</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rviz_marker_tools</depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
