<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_tree_ros2_rob8</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="due6230@gmail.com">lass6230</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>behaviortree_ros2</build_depend>
  <build_depend>behavior_tree_ros2_actions</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
